
## Process this file with automake to produce Makefile.in

# Additional files to distribute, but not install
dist_noinst_SCRIPTS = \
	bone-clean.sh \
	stage.sh

# Scripts to install
dist_bin_SCRIPTS = \
	aiki

# Additional files to distribute
EXTRA_DIST = \
	aiki.in

# Additional files to remove on dist-clean
DISTCLEANFILES = \
	aiki
