
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files =

# Subdirectories to be built
SUBDIRS = \
	apps \
	images \
	javascript \
	uploads

# Subdirectories to distribute
DIST_SUBDIRS = \
	apps \
	images \
	javascript \
	uploads

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/assets

# The source data
aiki_src_DATA = \
	$(aiki_src_files)
