
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files = \
	image_viewer.php

# Subdirectories to be built
SUBDIRS = \
	admin

# Subdirectories to distribute
DIST_SUBDIRS = \
	admin

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/assets/apps

# The source data
aiki_src_DATA = \
	$(aiki_src_files)