
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files = \
	aiki.js

# Subdirectories to be built
SUBDIRS = \
	codemirror \
	jquery \
	plupload

# Subdirectories to distribute
DIST_SUBDIRS = \
	codemirror \
	jquery \
	plupload

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/assets/javascript

# The source data
aiki_src_DATA = \
	$(aiki_src_files)
