
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files = \
	index.php \
	mssql.php \
	mysql.php \
	oracle8_9.php \
	pdo.php \
	postgresql.php \
	sqlite.php

# Subdirectories to be built
SUBDIRS =

# Subdirectories to distribute
DIST_SUBDIRS =

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/system/database

# The source data
aiki_src_DATA = \
	$(aiki_src_files)
