
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files = \
	aiki_array.php \
	aiki_curl.php \
	aiki_oauth.php \
	aiki_openid.php \
	bot.php \
	errors.php \
	forms.php \
	image.php \
	input.php \
	installer.php \
	languages.php \
	membership.php \
	output.php \
	parser.php \
	php.php \
	records.php \
	security.php \
	sql_markup.php \
	text.php \
	url.php \
	wiki.php

# Subdirectories to be built
SUBDIRS =

# Subdirectories to distribute
DIST_SUBDIRS =

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/system/libraries

# The source data
aiki_src_DATA = \
	$(aiki_src_files)
