
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files = \
	aikiflow.php \
	config.php \
	control_panel.js \
	database_forms.php \
	events.php \
	urls_widgets.php

# Subdirectories to be built
SUBDIRS = \
	images

# Subdirectories to distribute
DIST_SUBDIRS = \
	images

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/assets/apps/admin

# The source data
aiki_src_DATA = \
	$(aiki_src_files)
