
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files =

# Subdirectories to be built
SUBDIRS = \
	css \
	js

# Subdirectories to distribute
DIST_SUBDIRS = \
	css \
	js

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/assets/javascript/codemirror

# The source data
aiki_src_DATA = \
	$(aiki_src_files)
