
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files = \
	jquery-1.4.2.min.js \
	jquery-ui-1.7.2.custom.min.js

# Subdirectories to be built
SUBDIRS = \
	css \
	plugins

# Subdirectories to distribute
DIST_SUBDIRS = \
	css \
	plugins

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/assets/javascript/jquery

# The source data
aiki_src_DATA = \
	$(aiki_src_files)
