
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files = \
	browserplus-min.js \
	gears_init.js \
	jquery.plupload.queue.min.js \
	plupload.flash.swf \
	plupload.full.min.js \
	plupload.queue.css \
	upload.php

# Subdirectories to be built
SUBDIRS = \
	img

# Subdirectories to distribute
DIST_SUBDIRS = \
	img

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/assets/javascript/plupload

# The source data
aiki_src_DATA = \
	$(aiki_src_files)
