
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files = \
	accordeon_active.png \
	accordeon_default.png \
	aiki-icon.png \
	input_bg.png \
	input_button_active.png \
	input_button.png \
	logo.png \
	vgrabber.gif

# Subdirectories to be built
SUBDIRS = \
	icons

# Subdirectories to distribute
DIST_SUBDIRS = \
	icons

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/assets/apps/admin/images

# The source data
aiki_src_DATA = \
	$(aiki_src_files)
