
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files = \
	codemirror.js \
	editor.js \
	highlight.js \
	mirrorframe.js \
	parsecss.js \
	parsedummy.js \
	parsehtmlmixed.js \
	parsejavascript.js \
	parsephphtmlmixed.js \
	parsephp.js \
	parsesparql.js \
	parsexml.js \
	select.js \
	stringstream.js \
	tokenizejavascript.js \
	tokenize.js \
	tokenizephp.js \
	undo.js \
	util.js

# Subdirectories to be built
SUBDIRS =

# Subdirectories to distribute
DIST_SUBDIRS =

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/assets/javascript/codemirror/js

# The source data
aiki_src_DATA = \
	$(aiki_src_files)
