
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files =

# Subdirectories to be built
SUBDIRS = \
	smoothness

# Subdirectories to distribute
DIST_SUBDIRS = \
	smoothness

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/assets/javascript/jquery/css

# The source data
aiki_src_DATA = \
	$(aiki_src_files)
