
## Process this file with automake to produce Makefile.in

# The source files
aiki_src_files = \
	css.js \
	jquery.form.js \
	jquery.layout.min.js \
	jquery.xslt.js

# Subdirectories to be built
SUBDIRS = \
	jstree

# Subdirectories to distribute
DIST_SUBDIRS = \
	jstree

# Additional files to distribute
EXTRA_DIST = \
	$(aiki_src_files)

# The directory to put the files
aiki_srcdir = \
	$(pkgdatadir)/assets/javascript/jquery/plugins

# The source data
aiki_src_DATA = \
	$(aiki_src_files)
